# Splyce

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/Splyce/Transforms/: CoIterPattern.h
include/Transforms/: CMakeLists.txt  CoIterVectorBuilder.h  CoIterVectorizePass.h  Passes.td
lib/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  CoIterPattern.cpp  CoIterVectorBuilder.cpp  CoIterVectorizePass.cpp
playground/: gen_data.py
playground/sparse_dialect/: sparse_1.mlir  sparse_2.mlir
playground/vector_dialect/: vector_1.mlir
test/: CMakeLists.txt  coiter_scf.mlir  lit.cfg.py  lit.cfg.py.in
tools/: CMakeLists.txt  splyce-opt.cpp
tools/splyce-opt/: splyce-opt.cpp
